--- a/INSTALL
+++ b/INSTALL
@@ -251,10 +251,7 @@ MFEM_THREAD_SAFE = YES/NO
    cost of extra memory allocation and de-allocation.
 
 MFEM_USE_OPENMP = YES/NO
-   Enable OpenMP support.
-
-MFEM_LEGACY_USE_OPENMP = YES/NO
-   [Deprecated] Enable legacy OpenMP support. Requires MFEM_THREAD_SAFE.
+   Enable (basic) experimental OpenMP support. Requires MFEM_THREAD_SAFE.
 
 MFEM_USE_MEMALLOC = YES/NO
    Internal MFEM option: enable batch allocation for some small objects.
