--- a/INSTALL
+++ b/INSTALL
@@ -21,8 +21,8 @@ requires an MPI C++ compiler, as well as the following external libraries:
 The METIS dependency can be disabled but that is not generally recommended, see
 the option MFEM_USE_METIS.
 
-MFEM also include support for devices such as GPUs and different programming
-models such as CUDA, OCCA, OpenMP and RAJA.
+MFEM also includes support for devices such as GPUs, and programming models such
+as CUDA, OCCA, OpenMP and RAJA.
 
 - The device support requires a C++11 compiler
 
@@ -36,7 +36,7 @@ models such as CUDA, OCCA, OpenMP and RAJA.
   https://www.openmp.org
 
 - RAJA support requires installation of the RAJA performance portability layer
-  with (optional) support for CUDA and OpenMP
+  with (optionaly) support for CUDA and OpenMP
   https://github.com/LLNL/RAJA
 
 The library supports two build systems: one based on GNU make, and a second one
@@ -64,7 +64,7 @@ Parallel build:
    (build METIS 4 in ../metis-4.0 relative to mfem/)
    (build hypre 2.10.0b in ../hypre-2.10.0b relative to mfem/)
    make parallel -j 4
-   
+
 CUDA build:
    (make sure your CUDA_DIR variable points to the CUDA toolkit installation,
     e.g. /usr/local/cuda, see config/defaults.mk)
@@ -387,26 +387,27 @@ MFEM_USE_PUMI = YES/NO
    data management system that is capable of handling general non-manifold
    models and effectively supports automated adaptive analysis. PUMI enables
    support for parallel unstructured mesh modifications in MFEM.
-   
+
 MFEM_USE_MM = YES/NO
-   Enables support for the memory manager (MM) in MFEM. This manager is required
-   to support devices computing in different memory spaces.
+   Enables support for the MFEM's memory manager (MM), which is required to
+   support devices with different memory spaces.
 
 MFEM_USE_CUDA = YES/NO
    Enables support for CUDA devices in MFEM. CUDA is a parallel computing
    platform and programming model for general computing on graphical processing
-   units (GPUs). This option requires MFEM_USE_MM.
+   units (GPUs). This option requires MFEM_USE_MM. Parallel CUDA builds require
+   that CUDA_DIR and MPI_DIR point to the CUDA and MPI installation directories.
 
 MFEM_USE_RAJA = YES/NO
    Enable support for the RAJA performance portability layer in MFEM. RAJA
    provides a portable abstraction for loops, supporting different programming
    model backends. When using the RAJA CUDA backend, MFEM_USE_MM is required.
-   
+
 MFEM_USE_OCCA = YES/NO
    Enables support for the OCCA library in MFEM. OCCA is an open-source library
    which aims to make it easy to program different types of devices (e.g. CPU,
-   GPU, FPGA) by providing an unified API for interacting with backends. When
-   using the OCCA CUDA backend, MFEM_USE_MM is required.
+   GPU, FPGA) by providing an unified API for interacting with JIT-compiled
+   backends. When using the OCCA CUDA backend, MFEM_USE_MM is required.
 
 MFEM_BUILD_TAG = (any value)
    An optional tag to characterize the build. Exported to config/config.mk.
@@ -521,18 +522,18 @@ The specific libraries and their options are:
 - PUMI, used when MFEM_USE_PUMI = YES.
   URL: https://scorec.rpi.edu/pumi
   Options: PUMI_OPT, PUMI_LIB.
-  
+
 - CUDA, used when MFEM_USE_CUDA = YES.
   URL: https://developer.nvidia.com/cuda-toolkit
-  Options: CUDA_OPT, CUDA_LIB.
+  Options: CUDA_DIR, CUDA_OPT, CUDA_LIB.
 
 - OCCA, used when MFEM_USE_OCCA = YES.
   URL: https://libocca.org
-  Options: OCCA_OPT, OCCA_LIB.
+  Options: OCCA_DIR, OCCA_OPT, OCCA_LIB.
 
 - RAJA, used when MFEM_USE_RAJA = YES.
   URL: https://github.com/LLNL/RAJA
-  Options: RAJA_OPT, RAJA_LIB.
+  Options: RAJA_DIR, RAJA_OPT, RAJA_LIB.
 
 - MPFR (optional), used when MFEM_USE_MPFR = YES.
   URL: http://mpfr.org, it depends on the GMP library: https://gmplib.org
